# kaggle

./: Makefile  README.md  __main__.py  pyproject.toml
health_factors/: _categorizator.py  config.yml  etl.py  train.py
health_factors/data/: readme.txt
insurance/: config.yml  etl.py  train.py
insurance/models/: catboost_regressor.py  hist_gradient_boosting_regressor.py  light_lgbm.py  light_lgbm_regressor.py  random_forest_regressor.py  stacking_regressor.py  voting_regressor.py  xgboost_regressor.py
mental_health/: _maps.py  analysis.ipynb  config.yml  etl.py  train.py
mental_health/.ipynb_checkpoints/: analysis-checkpoint.ipynb
mental_health/data/: schema.pkl  submission_048d2afb.csv
mental_health/models/: booster_ensemble.py  catboost.py  light_lgbm.py  tabnet.py  xgboosting.py
product_defect/: config.yml  etl.py  scratch.ipynb  train.py
product_defect/models/: ada_boost.py  bagging_ensemble.py  booster_ensemble.py  catboost.py  hist_gradient.py  light_lgbm.py  random_forest.py  stacking_ensemble.py  voting_ensemble.py  xgboosting.py
spaceship_titanic/: config.yml  etl.py  train.py
spaceship_titanic/models/: booster_ensemble.py  booster_stacking.py  light_lgbm.py
tools/: cli.py  config.py  load.py  logger.py  pandas.py  save.py  schema.py  task.py
tools/models/classification/: ada_boost.py  light_lgbm.py  xgboosting.py
